fix z-index menu error

--- a/src/component/menu.css
+++ b/src/component/menu.css
@@ -5,7 +5,7 @@
   left: 15px;
   border-radius: 20px;
   background-color: white;
-  z-index: 1;
+  z-index: 11111111111;
 }
 
 .menu ul {
